--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-router": "^1.139.1",
     "@tanstack/react-router-devtools": "^1.139.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
